Fix everything with the Extension

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -17,5 +17,8 @@
     },
     "permissions": [
         "storage"
-    ]
+    ],
+    "background": {
+        "service_worker": "storeManager.js"
+    }
 }
