--- a/Firefox-Extension/manifest.json
+++ b/Firefox-Extension/manifest.json
@@ -25,7 +25,8 @@
     },
     "browser_specific_settings": {
         "gecko": {
-          "strict_min_version": "42.0"
+          "strict_min_version": "42.0",
+          "id": "{00000000-0000-0000-0000-000000000000}"
         }
     },
     "icons": {
